Fix cramped heading line

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -10734,7 +10734,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .masthead-thin .masthead-thin-heading {
   font-size: 2.75rem;
-  line-height: 1.75rem;
+  line-height: 3rem;
 }
 
 .masthead .masthead-heading {
